--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -33,7 +33,7 @@ jobs:
     #   The last line should be `optimize()` though you may want to give it
     #   specific arguments, see the documentation or ?optimize in the REPL.
     - run: julia -e '
-            using Pkg; Pkg.activate("."); Pkg.instantiate(); Pkg.add("Franklin", "NodeJS");
+            using Pkg; Pkg.activate("."); Pkg.instantiate(); Pkg.add(["Franklin", "NodeJS"]);
             using NodeJS; run(`$(npm_cmd()) install highlight.js`);
             using Franklin;
             optimize()'
