updated JULIA_NUM_THREADS in actions to 2

--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -17,6 +17,8 @@ jobs:
     - run: npm install highlight.js
     - name: Install Julia
       uses: julia-actions/setup-julia@v1
+      env:
+        JULIA_NUM_THREADS: 2
       with:
         version: 1.6
     # NOTE
