draft 5_MCMC and updated deploy.yml

--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -42,6 +42,7 @@ jobs:
     - name: Build and Deploy
       uses: JamesIves/github-pages-deploy-action@releases/v3
       with:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         branch: gh-pages
         folder: __site
         # To reduce state.
