testing now tables

--- a/Project.toml
+++ b/Project.toml
@@ -22,5 +22,4 @@ Turing = "fce5fe82-541a-59a6-adf8-730c64b5f9a0"
 
 [compat]
 julia = "1"
-DifferentialEquations = "6.18"
-Turing = "0.16"
+Tables = "1.4"
