added Pkg.PackageSpec for Parsers 1.1.2

--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -31,7 +31,7 @@ jobs:
     #   The last line should be `optimize()` though you may want to give it
     #   specific arguments, see the documentation or ?optimize in the REPL.
     - run: julia -e '
-            using Pkg; Pkg.add(["Franklin", "NodeJS", "Parsers@1.1.2"]);
+            using Pkg; Pkg.add(["Franklin", "NodeJS", Pkg.PackageSpec(name="Parsers", version="1.1.2")]);
             using NodeJS; run(`$(npm_cmd()) install highlight.js`);
             using Franklin;
             Pkg.activate("."); Pkg.instantiate();
