--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -30,7 +30,7 @@ jobs:
     #   Julia packages which may be required to successfully build your site.
     #   The last line should be `optimize()` though you may want to give it
     #   specific arguments, see the documentation or ?optimize in the REPL.
-    - run: julia -e '
+    - run: julia --color=yes -e '
             using Pkg;
             Pkg.activate("."); Pkg.instantiate();
             using NodeJS; run(`$(npm_cmd()) install highlight.js`);
