--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Install Julia
       uses: julia-actions/setup-julia@v1
       with:
-        version: 1.6
+        version: '1.7'
     # NOTE
     #   The steps below ensure that NodeJS and Franklin are loaded then it
     #   installs highlight.js which is needed for the prerendering step
