--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -45,7 +45,7 @@ jobs:
     - name: Build and Deploy
       uses: JamesIves/github-pages-deploy-action@4.1.0
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+        token: ${{ secrets.GITHUB_TOKEN }}
         branch: gh-pages
         folder: __site
         # To reduce state.
