--- a/Project.toml
+++ b/Project.toml
@@ -24,6 +24,27 @@ StatsFuns = "4c63d2b9-4356-54db-8cca-17b64c39e42c"
 Turing = "fce5fe82-541a-59a6-adf8-730c64b5f9a0"
 
 [compat]
-Turing = "0.29"
+AlgebraOfGraphics = "0.6"
+BenchmarkTools = "1"
 Bijectors = "0.13"
+CSV = "0.10"
+CairoMakie = "0.11"
+CategoricalArrays = "0.10"
+Chain = "0.5"
+Colors = "0.12"
+DataFrames = "1"
+DifferentialEquations = "7"
+Distributions = "0.25"
+Downloads = "1"
+FillArrays = "1"
+ForwardDiff = "0.10"
+Fraklin = "0.10"
+HTTP = "1"
+LazyArrays = "1"
+Literate = "2"
+MCMCChains = "0.6"
+NodeJS = "2"
+StatsBase = "0.34"
+StatsFuns = "1"
+Turing = "0.29"
 julia = "1"
