--- a/Project.toml
+++ b/Project.toml
@@ -38,11 +38,11 @@ Distributions = "0.25"
 Downloads = "1"
 FillArrays = "1"
 ForwardDiff = "0.10"
-Fraklin = "0.10"
+Franklin = "0.10"
 HTTP = "1"
 LazyArrays = "1"
 Literate = "2"
-MCMCChains = "0.6"
+MCMCChains = "6"
 NodeJS = "2"
 StatsBase = "0.34"
 StatsFuns = "1"
