--- a/Project.toml
+++ b/Project.toml
@@ -45,6 +45,7 @@ LazyArrays = "1"
 Literate = "2"
 MCMCChains = "6"
 NodeJS = "2"
+PDMats = "0.11"
 StatsBase = "0.34"
 StatsFuns = "1"
 Turing = "0.29"
