--- a/.typos.toml
+++ b/.typos.toml
@@ -1,7 +1,9 @@
 [default]
 extend-ignore-re = [
-    # citation keys
-    "textcite\\{.*\\}",
+    "textcite\\{.*\\}",                # citation keys
+    "\\b[0-9A-Za-z+/]{91}(=|==)?\\b",  # base64 strings
+    "[0-9a-fA-F]{7,}",                 # git commit hashes
+    "\\b[0-9A-Za-z+/]{33,}(=|==)?\\b", # SHA/tpub/adresses etc strings
 ]
 
 [default.extend-words]
